--- a/backend/src/index.html
+++ b/backend/src/index.html
@@ -7,12 +7,36 @@
   <title>Document</title>
 </head>
 <body>
+  <input type="text" id="input"/>
+  <button onclick="create()">Create</button>
+  <button onclick="join()">Join</button>
+  <button onclick="ready()">Ready Up</button>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.js"></script>
   <script>
     const socket = io("http://localhost:3000");
     socket.on("connect", () => {
       console.log("connected");
     });
+    
+    socket.on("player_joined", (id) => {
+      console.log(`Player has joined`);
+    })
+
+    socket.on("start_game", () => {
+      console.log("start");
+    })
+    
+    const input = document.querySelector("#input");
+    const create = () => {
+      socket.emit("create", input.value, (resp) => console.log(resp));
+    }
+    const join = () => {
+      socket.emit("join", input.value, (resp) => console.log(resp));
+    }
+    const ready = () => {
+      socket.emit("ready_up", [[{x: 1, y: 1}, {x: 2, y: 1}]], (resp) => console.log(resp));
+    }
+
   </script>
 </body>
 </html>
